@@ -1,7 +1,6 @@
 Batteries_config
 Batlib_Baselib_StringLabels
 Batlib_Baselib_Set
-Batlib_Baselib_Map
 Batlib_Baselib_ListLabels
 Batlib_Baselib_Filename
 Batlib_Baselib_Callback
