@@ -5,7 +5,6 @@ Batlib_Baselib_Condition
 Batlib_Baselib_Event
 Batlib_Baselib_StringLabels
 Batlib_Baselib_Set
-Batlib_Baselib_Map
 Batlib_Baselib_ListLabels
 Batlib_Baselib_Filename
 Batlib_Baselib_Callback
